Fixed tabs bug on Safari

--- a/frontend/src/css/NavBar.css
+++ b/frontend/src/css/NavBar.css
@@ -5,7 +5,7 @@
 }
 
 .Container {
-  padding: 10px 20px 0px;
+  margin: 10px 20px 0px;
 }
 .Main {
   display: flex;
@@ -30,15 +30,20 @@
 
 .Pages {
   flex: 1;
-  display: table;
-  table-layout: fixed;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  flex-wrap:wrap;
   width: 100%;
   border-spacing: 1rem;
 }
 
 .Pages a {
-  display: table-cell;
-  vertical-align: middle;
+  flex: 1;
+  margin: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   border: 2px solid white;
   background-color: var(--blue);
